--- a/package.json
+++ b/package.json
@@ -1,36 +1,20 @@
 {
   "name": "@xxm7/leet-code-cli",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "",
+  "type": "module",
   "bin": {
-    "xxm": "./dist/cli.js"
+    "xxm": "./bin/index.js"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js",
-    "xxm": "node ./dist/cli.js"
+    "xxm": "node ./bin/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@types/figlet": "^1.5.4",
-    "@types/inquirer": "^8.2.1",
-    "@types/node": "^17.0.25",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
     "eslint": "^8.13.0",
-    "esno": "^0.14.1",
-    "rollup": "^2.70.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.3"
+    "esno": "^0.14.1"
   },
   "dependencies": {
     "chalk": "^5.0.1",
